# personal-assistant-cli

./: .flake8  .gitignore  LICENSE  Makefile  README.md  demo.py  pyproject.toml  requirements.txt
core/: app_context.py
exceptions/: __init__.py  already_exist_error.py  not_found_error.py
models/: contact.py  note.py
models/values/: __init__.py  address.py  birthday.py  email.py  field.py  name.py  phone.py  tag.py  title.py
repositories/: __init__.py  contacts.py  contacts_in_memory.py  notes.py  notes_in_memory.py  notes_storage.py  storage.py
services/: __init__.py  contacts_repo.py  contacts_service.py  id_gen.py  notes_repo.py  notes_request.py  notes_service.py
storage/: __init__.py  file_storage.py  json_serializer.py  pickle_serializer.py  serializer.py
tests/unit/: test_contact.py
tests/unit/models/: test_contact.py  test_note.py
tests/unit/models/values/: test_address.py  test_birthday.py  test_email.py  test_phone.py  test_tag.py
ui/: cli.py  commands.py  error_util.py  factory.py  output_util.py
validators/: phone_validator.py
