[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-assistant-cli"
version = "0.1.0"
description = "A command-line Personal Assistant application for managing contacts and notes"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "See LICENSE file"}
authors = [
    {name = "Alex Kirikov", email = "alex.kirikov@gmail.com"},
    {name = "Kostiantyn Stefanovych", email = "kostia.stefanovitch@gmail.com"},
    {name = "Oleksii Panasiuk", email = "alexey.panasiuk.job@gmail.com"},
    {name = "Sergiy Karpov", email = "sergey.al.karpov@gmail.com"},
    {name = "Vasyl Domanchuk", email = "domanchukits@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Utilities"
]
dependencies = [
    "colorama==0.4.6",
]

[project.optional-dependencies]
dev = [
    "coverage==7.11.3",
    "flake8==7.3.0",
    "flake8_import_order==0.19.2",
    "mccabe==0.7.0",
    "pycodestyle==2.14.0",
    "pyflakes==3.4.0",
    "pyreadline3==3.5.4",
]

[project.scripts]
personal-assistant = "ui.cli:main"
pa = "ui.cli:main"

[tool.setuptools]
packages = [
    "core",
    "exceptions",
    "models",
    "models.values",
    "repositories",
    "services",
    "storage",
    "ui",
]

[tool.setuptools.package-data]
"*" = ["*.json"]

